--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "papaparse": "^5.5.3",
+    "puppeteer": "^24.10.2",
     "winston": "^3.17.0"
   },
   "devDependencies": {
