--- a/package.json
+++ b/package.json
@@ -13,18 +13,21 @@
   "scripts": {
     "start": "node server/app.js",
     "dev": "nodemon server/app.js",
-    "test": "jest",
+    "test": "NODE_ENV=test jest --config=jest.config.js",
     "build": "cp node_modules/@ping-identity/p14c-js-sdk-auth/dist/browser/@ping-identity/p14c-js-sdk-auth.js p14c-js-sdk-auth.js",
     "version:patch": "npm version patch && git push && git push --tags",
     "version:minor": "npm version minor && git push && git push --tags",
     "version:major": "npm version major && git push && git push --tags",
-    "release": "npm run build && npm run version:patch"
+    "release": "npm run build && npm run version:patch",
+    "test:watch": "NODE_ENV=test jest --watch --config=jest.config.js"
   },
   "dependencies": {
     "@ping-identity/p14c-js-sdk-auth": "^1.0.0-pre.2",
     "axios": "^1.10.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^4.18.2",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "papaparse": "^5.5.3",
     "puppeteer": "^24.10.2",
@@ -32,7 +35,8 @@
   },
   "devDependencies": {
     "jest": "^29.7.0",
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "supertest": "^7.1.1"
   },
   "ignore": [
     "**/.*",
