--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,31 @@ typings/
 .rpt2_cache/
 .rts2_cache_cjs/
 .rts2_cache_es/
+
+# Backup files
+*.bak
+*.backup
+*~
+
+# Temporary files
+*.tmp
+*.swp
+.DS_Store
+
+# Local development files
+.env
+.env.local
+.env.*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea/
+*.sublime-workspace
+*.sublime-project
+
+# Untitled files
+**/Untitled-*
 .rts2_cache_umd/
 
 # Optional REPL history
