--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@ping-identity/p14c-js-sdk-auth": "^1.0.0-pre.2",
     "axios": "^1.10.0",
     "cors": "^2.8.5",
+    "csv-parser": "^3.2.0",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
+    "form-data": "^4.0.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "papaparse": "^5.5.3",
